--- a/static/css/blog_manage.css
+++ b/static/css/blog_manage.css
@@ -90,6 +90,16 @@ body{
     border: 1px solid #04b5eb;
 }
 /*1.3 下拉菜单*/
+#index{
+    float: right;
+    font: 400 18px yahei;
+    color: #000;
+    margin-top: 12px;
+    margin-right: 65px;
+}
+#index:hover{
+    color: blue;
+}
 #top ul{
     float:right;
     margin-right:95px;
