--- a/templates/blog_manage.html
+++ b/templates/blog_manage.html
@@ -42,6 +42,7 @@
                     </ol>
                 </li>
             </ul>
+            <a href="/index" id="index">首页</a>
         </div>
     </div>
 <!--标题行-->
