--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
                 <p></p>
                 <div id="submit2">
                     <input type="submit" value="登陆" class="but">
-                    <a href="/register" class="but">会员注册</a>
+                    <a href="/regist" class="but">会员注册</a>
                 </div>
             </div>
         </form>
