--- a/templates/regist.html
+++ b/templates/regist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>注册兄弟论坛账号</title>
 	<link rel="icon" href="../static/images/icon.png" type="img/png" />
-    <link rel="stylesheet" href="../static/css/register.css" type="text/css">
+    <link rel="stylesheet" href="../static/css/regist.css" type="text/css">
     <script src="../static/js/jquery-1.11.3.js"></script>
     <script src="../static/js/regist.js"></script>
 </head>
@@ -22,12 +22,12 @@
             <div class="form-line">
                 <p class="front">用户名</p>
                 <input type="text" name="name" placeholder="请设置用户名" maxlength="20" required>
-                <p class="back">汉字、数字、字母、下划线组成，不少于8位,最长20字符</p>
+                <p class="back">汉字、数字、字母、下划线组成,最长20字符</p>
             </div>
             <div class="form-line">
                 <p class="front">密码</p>
                 <input type="password" name="pwd" placeholder="请设置登录密码" maxlength="20" required>
-                <p class="back">支持数字大小写字母不允许有空格，不少于8位，最长20字符</p>
+                <p class="back">支持数字大小写字母不允许有空格,不少于6位，最长20字符</p>
             </div>
             <div class="form-line">
                 <p class="front">确认密码</p>
