--- a/static/css/write.css
+++ b/static/css/write.css
@@ -70,7 +70,7 @@ body,h1,h2,h3,h4,h5,h6,ul,a,p{
     font-size: 14px;
     font-weight: bold;
     outline: none;
-    border-left: 1px solid grey;
+    border-left: 1px solid #DDDDDD;
 }
 .topcenter div{
     position:absolute;
