--- a/templates/index.html
+++ b/templates/index.html
@@ -1,77 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="Generator" content="Visual Studio Code">
-<meta name="Author" content="Addison">
-<meta name="Keywords" content="javascript">
-<title>Document</title>
-<link rel="stylesheet" href="../static/css/index.css" type="text/css">
-<style>
-#top{
-    font-weight: 500;
-    font-family: "Microsoft YaHei";
-    font-style: italic;
-    font-size: 32px;
-    color: rgb(28, 218, 208);
-    cursor: pointer;
-}
-</style>
+    <meta charset="UTF-8">
+    <title>首页</title>
+    <link href="../static/images/logo.png">
+    <link href="../static/css/index.css" rel="stylesheet">
+    <script src="../static/js/jquery-1.11.3.js"></script>
+    <script src="../static/js/index.js"></script>
 </head>
-<body> 
-    <!-- 顶部导航 -->
-    <div id="top"> 
-        <h1>Brothers Frume</h1>
-        {% if request.cookies %}
-            <h1>{{ request.cookies['uname'] }}</h1>
-        {% endif %}
-    </div>
-    <div id = "nav">
+<body>
+    <!--1.顶部-->
+    <div id="top">
+        <div class="topleft">
+            <img class="item" src="../static/images/logo.png">
+            <p class="item">Bother Forum</p >
+        </div>
+        <p id="index">首页</p>
+        <div class="topcenter">
+            <input type="text" name="search" placeholder="请输入要搜索的内容">
+            <button>搜索</button>
+            <div></div>
+        </div>
+        <div class="topright">
+            <img src="../static/images/message-icon.png" height="24" width="30"/>
+            <p><a href="">消息</a></p>
+            <img src="../static/images/write_blog.png" height="24" width="30"/>
+            <p><a href="/write">写博客</a></p>
+        </div>
         <ul>
-            <li>
-                <a>advisory</a>
-            </li>
-            <li class="all">
-                <a>plate
-                    <ul class="air">
-                        <li>one</li>
-                        <li>two</li>
-                        <li>three</li>
-                        <li>four</li>
-                        <li>five</li>
-                        <li>six</li>
-                        <li>seven</li>
-                    </ul>
-                </a>
-            </li>
-
-            <li>
-                <a>message</a>
-            </li>
-            <li>
-                <a href="/login">log in</a>
-            </li>
-            <li>
-                <a>sign in</a>
+            <li class="pic">
+                <div class="img">
+                   <img src="../static/images/icon.png">
+                </div>
+                <ol class="list">
+                    <li><a href="">我的关注</a></li>
+                    <li><a href="">我的收藏</a></li>
+                    <li><a href="">个人中心</a></li>
+                    <li><a href="">账号设置</a></li>
+                </ol>
             </li>
         </ul>
     </div>
-    <!--主体-->
-    <div id="main"></div>
-    <!--2.1设置问答框-->
-    <div class="quiz">
-        <div id="banner">
+    <!--2.主体-->
+    <div id="main">
+        <!--2.1主体左侧导航栏-->
+        <div id="main-left">
             <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-                <li>4</li>
-                <li>5</li>
+                <li><p>推荐</p></li>
+                <li><a href="">Python</a></li>
+                <li><a href="">网络编程</a></li>
+                <li><a href="">MySQL</a></li>
+                <li><a href="">MongoDB</a></li>
+                <li><a href="">Web</a></li>
+                <li><a href="">爬虫</a></li>
             </ul>
-
+        </div>
+        <!--2.2主体中部-->
+        <div id="main-middle">
+            <!--轮播图-->
+            <div id="banner">
+                <img src="../static/images/blog_manage/index_banner1.jpg" alt="">
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                </ul>
+                <a href="javascript:void(0)" class="left"></a>
+                <a href="javascript:void(0)" class="right"></a>
+            </div>
+            <!--主显示区-->
+            <div id="view">
+                {% for text in param.text %}
+                <div class="list">
+                    <h4><a href="">{{ 这里是帖子标题 }}</a></h4>
+                    <p id="show-text">
+                        显示帖子内容{{ param |truncate(100) }}
+                    </p>
+                    <span>{{ 用户名 }}</span>
+                    <div>
+                        <span style="color: #222;">{{ 2019年5月20日 }}</span>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <span style="color: #222;">评论数</span>
+                        <span style="color: #33A6EF;">{{ 2140 }}</span>
+                        &nbsp;<span style="color: #222;">|</span>&nbsp;
+                        <span style="color: #222;">点赞数</span>
+                        <span style="color: #33A6EF;">{{ 2264 }}</span>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <!--2.3主体右侧-->
+        <div id="main-right">
+            <div><a href="https://ke.qq.com/course/401721?taid=3419829055136057&tuin=bc808505"><img src="../static/images/AD.png"></a></div>
+            <div><a href="https://www.tmooc.cn"><img src="../static/images/tarena.jpg"></a></div>
+            <div id="cloud">
+                <h2 id="hometitle">标签云</h2>
+                <ul>
+                    <a href="https://www.csdn.net/">CSDN-专业IT技术社区</a>
+                    <a href="https://www.runoob.com/">菜鸟教程</a></li>
+                    <a href="http://python.jobbole.com/">python-伯乐在线</a>
+                    <a href="https://www.python.org/">python官网</a>
+                    <a href="https://github.com/">GutHub</a>
+                    <a href="https://www.cnblogs.com/">博客园</a>
+                </ul>
+            </div>
         </div>
     </div>
-    <!--2.2设置热帖榜-->
-    <div class="popular"></div>
 </body>
 </html>
