--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -22,14 +22,30 @@
         </div>
         <div class="right">
             <span class="title">找回密码，快捷登录</span>
-            <form action="/reset_password" method="post" enctype="multipart/form-data">
+            <form action="/reset_pwd" method="post" enctype="multipart/form-data">
                 <div class="line">
                     <p>手机号</p>
                     <div class="inline">
-                        <input type="text" name="user_phone" maxlength="11" class="phone_input" placeholder="请输入手机号" required>
+                        <input type="text" name="phone"
+                               {% if params.code_phone %}
+                                    value="{{ params.code_phone }}"
+                               {% endif %}
+                               maxlength="11" class="phone_input" placeholder="请输入手机号" required>
                         <img src="../static/images/input1.png" class="clear">
                     </div>
-                    <span class="uphone">手机号码不正确，或尚未注册</span>
+                    <span class="uphone"> </span>
+                    <b style="color:red;font-size:14px;">
+                        {% if params.phone_result %}
+                            手机号码不正确，或尚未注册
+                            <script>
+                                var timer=setTimeout(function (){
+                                    $(".uphone").siblings("b").css("display","none");
+                                    console.log("隐藏")
+                                },3000);
+                                console.log("开始显示");
+                                clearTimeout(timer)
+                            </script>
+                        {% endif %}</b>
                 </div>
                 <div class="line">
                     <p>验证码</p>
@@ -38,12 +54,24 @@
                         <img src="../static/images/input1.png" class="clear" id="codeimg">
                     </div>
                     <button type="button" class="codebtn" onclick="getCertifyCode()">发送验证码</button>
-                    <span class="code">验证码不正确</span>
+                    <b style="color: red;font-size: 14px;">
+                        {% if params.code_result %}
+                            验证码不正确
+                            <script>
+                                var timer=setTimeout(function(){
+                                    $(".uphone").css("display","none");
+                                    console.log("隐藏")
+                                },3000);
+                                console.log("开始显示");
+                                clearTimeout(timer)
+                            </script>
+                        {% endif %}</b>
                 </div>
+
                 <div class="line">
                     <p>设置密码</p>
                     <div class="inline">
-                        <input class="first_psw" type="password" name="reset_password" maxlength="20" placeholder="请设置登录密码" required>
+                        <input class="first_psw" type="password" name="reset_pwd" maxlength="20" placeholder="请设置登录密码" required>
                         <img src="../static/images/input1.png" class="clear">
                     </div>
                     <span class="resetPSW">密码不得少于6位</span>
@@ -51,7 +79,7 @@
                 <div class="line">
                     <p>重复密码</p>
                     <div class="inline">
-                        <input class="second_psw" type="password" name="confirm_password" maxlength="20" placeholder="请再次输入密码" required>
+                        <input class="second_psw" type="password" name="confirm_pwd" maxlength="20" placeholder="请再次输入密码" required>
                         <img src="../static/images/input1.png" class="clear">
                     </div>
                     <span class="reputPSW">两次输入密码不一致</span>
@@ -64,7 +92,7 @@
 		<div>
 			<a href=" ">关于brother forum</a>
 			<span id="copyright">Copyright &copy; 2019 </span>
-			<a href="index.html">兄弟论坛</a>
+			<a href="view.html">兄弟论坛</a>
 		</div>
 
     </div>
