--- a/templates/login.html
+++ b/templates/login.html
@@ -19,39 +19,39 @@
         <div class="picture">
             <img src="../static/images/p1.png" width="600px" ;>
             <span>还没有账号?</span>
-            <a href="/register">会员注册</a>
+            <a href="/regist">会员注册</a>
         </div>
         <form action="/login" method="post" enctype="multipart/form-data">
 			<div id="log-picture">
 				<img src="../static/images/tittle.png" title="登陆一下嘛..">
 			</div>
             <span
-                {% if params %}
+                {% if params.user %}
                     style="visibility:inherit"
                 {% else %}
                     style="visibility:hidden"
                 {% endif %}
-                    id="tips">账号或密码有误，请重新输入或<a href="/reset_password">找回密码</a></span>
+                    id="tips">账号或密码有误，请重新输入或<a href="/reset_pwd">找回密码</a></span>
             <div class="form-line" style="clear:both">
                 <p>账号</p>
                 <span class="clearinput">
-                    <input type="text" name="user_name" placeholder="请输入用户名或手机号码" maxlength="11" class="uinput" required>
+                    <input type="text" name="uname" placeholder="请输入用户名或手机号码" maxlength="11" class="uinput" required>
                     <img src="../static/images/input1.png" class="clearimg"></span>
                 </span>
             </div>
             <div class="form-line">
                 <p>密码</p>
                 <span  class="clearinput">
-                    <input type="password" name="user_password" placeholder="请输入密码" maxlength="10" class="uinput"  required>
+                    <input type="password" name="upwd" placeholder="请输入密码" maxlength="10" class="uinput"  required>
                     <img src="../static/images/input1.png" class="clearimg"></span>
                 </span>
             </div>
             <div class="form-line">
                 <p id="no_use"></p>
                 <div id="submit1">
-                    <input type="checkbox" name="rem_psw" value="yes" id="rem-psw" class="checkbox"><label for="rem-psw" id="remember">记住密码</label>
+                    <input type="checkbox" name="rmb_pwd" id="rmb-pwd" class="checkbox"><label for="rmb-pwd" id="remember">记住密码</label>
                     <p>
-                        <a href="/reset_password">忘记密码？找回密码</a>
+                        <a href="/reset_pwd">忘记密码？找回密码</a>
                     </p>
                 </div>
             </div>
@@ -68,7 +68,7 @@
 		<div>
 			<a href="">关于brother forum</a>
 			<span id="copyright">Copyright &copy; 2019 </span>
-			<a href="index.html">兄弟论坛</a>
+			<a href="view.html">兄弟论坛</a>
 		</div>
     </div>
 
