--- a/templates/write.html
+++ b/templates/write.html
@@ -52,13 +52,17 @@
         <!--主体左侧-->
         <div id="left">
             <div id="left1">
-                <a href=""><img src="" alt=""></a>
-                <a href="">zhangan</a>
+                {% if params.img %}
+                    <a href=""><img src="{{ params.img }}" alt=""></a>
+                {% else %}
+                    <a href=""><img src="../static/images/icon.png" alt=""></a>
+                {% endif %}
+                <a href="">{{ session['uname'] }}</a>
             </div>
             <div id="left2">
                 <div>
                     <p>原创</p>
-                    <p>0</p>
+                    <p>{{ params.blogs }}</p>
                 </div>
                 <div>
                     <p>粉丝</p>
@@ -70,7 +74,7 @@
                 </div>
                 <div>
                     <p>评论</p>
-                    <p>0</p>
+                    <p>{{ params.comments }}</p>
                 </div>
             </div>
             <div id="banner">
@@ -88,17 +92,17 @@
         </div>
         <!--主体右侧-->
         <div id="right">
-            <form action="/blog_manage">
+            <form action="/write_blog" method="post" enctype="multipart/form-data">
                 <div id="line1">
                     <span>标题</span><input type="text" name="title" id="title" maxlength="35" required>
                 </div>
                 <div id="line2">
-                    <span>类型</span><input type="radio" class="type" id="type1" name="type" value="1" checked><label for="type1">python</label>
-                    <input type="radio" class="type" id="type2" name="type" value="2"><label for="type2">网络编程</label>
-                    <input type="radio" class="type" id="type3" name="type" value="3"><label for="type3">MySQL</label>
-                    <input type="radio" class="type" id="type3" name="type" value="4"><label for="type3">MongoDB</label>
-                    <input type="radio" class="type" id="type3" name="type" value="5"><label for="type3">Web</label>
-                    <input type="radio" class="type" id="type3" name="type" value="6"><label for="type3">爬虫</label>
+                    <span>类型</span><input type="radio" class="type" id="type1" name="type" value="python" checked><label for="type1">python</label>
+                    <input type="radio" class="type" id="type2" name="type" value="网络编程"><label for="type2">网络编程</label>
+                    <input type="radio" class="type" id="type3" name="type" value="MySQL"><label for="type3">MySQL</label>
+                    <input type="radio" class="type" id="type3" name="type" value="MongoDB"><label for="type3">MongoDB</label>
+                    <input type="radio" class="type" id="type3" name="type" value="Web"><label for="type3">Web</label>
+                    <input type="radio" class="type" id="type3" name="type" value="爬虫"><label for="type3">爬虫</label>
                 </div>
                 <!--<div id="line3">
                     <span>添加图片</span><input type="file" name="img">
