--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <link href="../static/images/logo.png">
+    <link href="../static/images/icon.png" rel="icon">
     <link href="../static/css/index.css" rel="stylesheet">
     <script src="../static/js/jquery-1.11.3.js"></script>
     <script src="../static/js/index.js"></script>
@@ -49,12 +49,12 @@
         <div id="main-left">
             <ul>
                 <li><p>推荐</p></li>
-                <li><a href="">Python</a></li>
-                <li><a href="">网络编程</a></li>
-                <li><a href="">MySQL</a></li>
-                <li><a href="">MongoDB</a></li>
-                <li><a href="">Web</a></li>
-                <li><a href="">爬虫</a></li>
+                <li class="nav">Python</li>
+                <li class="nav">网络编程</li>
+                <li class="nav">MySQL</li>
+                <li class="nav">MongoDB</li>
+                <li class="nav">Web</li>
+                <li class="nav">爬虫</li>
             </ul>
         </div>
         <!--2.2主体中部-->
@@ -76,8 +76,8 @@
             <div id="view">
                 {% for blog in params.blogs %}
                 <div class="list">
-                    <h4><a href="">{{ blog.title }}</a></h4>
-                    <p id="show-text">
+                    <h4><a href="/blog?blog_title={{ blog.title }}">{{ blog.title }}</a></h4>
+                    <p class="show-text">
                         显示帖子内容{{ blog.content |truncate(100) }}
                     </p>
                     <span>{{ blog.user.uname }}</span>
@@ -94,7 +94,7 @@
                         </span>
                         &nbsp;<span style="color: #222;">|</span>&nbsp;
                         <span style="color: #222;">点赞数</span>
-                        <span style="color: #33A6EF;">{{ 2264 }}</span>
+                        <span style="color: #33A6EF;">{{ blog.great_num }}</span>
                     </div>
                 </div>
                 {% endfor %}
